# ricks-vision

./: .gitattributes  .gitignore  README.md  render.yaml
client/: package-lock.json  package.json  page.tsx  pnpm-lock.yaml
client/app/: layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
client/app/api/og/: route.tsx
client/app/api/subscribe/: route.ts
client/app/api/unsubscribe/: route.ts
client/components/: SignupPanel.tsx  SuccessPanel.tsx
client/db/migrations/: 001_create_subscribers.sql
client/public/: contact.vcf
data/: actual-line-data.txt  coords.txt  ricks-stream.ts
server/: admin_dashboard.py  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: __init__.py  nights.py  subscribers.py  updates.py
server/app/api/webhook/: __init__.py  individual_update.py  initial_message.py  nightly_subscription.py  updates_mass_text.py
server/app/core/: config.py
server/app/db/: __init__.py  database.py
server/app/models/: __init__.py  line_update.py  night.py  subscriber.py  subscriber_night.py
server/scripts/: analyze_area.py  color_in_lines.py  download_yolov3.py  load_stream.py  plot_actual_data.py  plot_estimated_data.py  preprocess_image.py  preprocess_image_ludicrous.py  show_coords.py  test_ui.py  track_stream.py
