[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Shrey Pandya <shrey150@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
